2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java: improved the
	code style.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed the values criticity_name and criticity_image in the events.

2012-10-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/API.java: added more log
	for to make more easy.
	
	* src/pandroid_event_viewer/pandorafms/Core.java: the constant
	TIMEOUT now is 10 seconds instead old 5 seconds that sometimes
	fails.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	added functions "getEvents_v50" and "getEvents_old" for to get
	events list for serveral api pandora versions.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java:
	fixed source code style.

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml: removed the typo bug.
	
	* src/pandroid_event_viewer/pandorafms/Core.java, 
	src/pandroid_event_viewer/pandorafms/API.java,
	src/pandroid_event_viewer/pandorafms/About.java,
	src/pandroid_event_viewer/pandorafms/EventList.java: fixed the code
	style.

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* .classpath: removed the entry for ".svn" folder
	...is the eclipse crazy?

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/values-ja/strings.xml, res/values/strings.xml,
	res/values-es/strings.xml: fixed the untranslate strings.

2012-09-13 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/EventList.java: Now, if an element is validated, his color changes to green.
	* src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java: Now it returns a result (validated or not) which will be processed for the activity which called it. 
	* res/values/colors.xml: Added colors to values instead of hardcoding them.

2012-09-13  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/criticity_0.png,